# JobHunter

./: .dockerignore  .flake8  .gitignore  DOCKER-COMPOSE.yml  README.md  pyproject.toml
ai_engine/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
ai_engine/config/: config.yaml
ai_engine/core/: config.py  exceptions.py  types.py
ai_engine/core/logging_/: error_tracker.py  logger.py  metrics.py
ai_engine/features/analysis/: job_analyser.py
ai_engine/features/analysis/models/: job_analysis.py
ai_engine/features/analysis/strategies/: llm_analyzer.py
ai_engine/features/approval/: approval_gate.py
ai_engine/features/approval/models/: approval_status.py
ai_engine/features/approval/strategies/: approval_token_strategy.py
ai_engine/features/ingestion/: job_ingester.py
ai_engine/features/ingestion/models/: job_record.py
ai_engine/features/llm/: base.py  router.py
ai_engine/features/matching/: comparator.py
ai_engine/features/optimization/: resume_optimiser.py
ai_engine/features/orchestration/: pipeline.py
ai_engine/features/output/: output_builder.py
ai_engine/features/resume/: resume_parser.py
ai_engine/features/variant_management/: manager.py
ai_engine/shared/: date_utils.py  file_utils.py  schema_utils.py  text_utils.py
ai_engine/tests/: conftest.py
ai_engine/tests/fixtures/: mock_providers.py  sample_analyses.py  sample_jobs.py  sample_resumes.py
ai_engine/tests/fixtures_data/: scraper_output_sample.csv  scraper_output_sample.json
ai_engine/tests/integration/: test_end_to_end_pipeline.py  test_fabrication_detection.py  test_minio_integration.py  test_output_file_generation.py  test_provider_fallback_chain.py  test_shared_registry_live.py  test_variant_limit_enforcement.py
ai_engine/tests/unit/: test_approval_gate.py  test_comparator.py  test_config.py  test_fabrication_validator.py  test_job_analyser.py  test_job_ingester.py  test_llm_router.py  test_minio_uploader.py  test_output_builder.py  test_resume_optimiser.py  test_resume_parser.py  test_variant_manager.py
scraper/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
scraper/admin_dashboard/: app.py  routes.py
scraper/admin_dashboard/templates/: dashboard.html
scraper/config/: field_mappings.yaml  scraper_config.yaml
scraper/data_collector_ui/: app.py  models.py  routes.py
scraper/data_collector_ui/templates/: questionnaire.html
scraper/docker/: .dockerignore  Dockerfile  docker-compose.yml
scraper/scraper/: config.py
scraper/scraper/cleaning/: cleaner_pipeline.py  date_cleaner.py  location_cleaner.py  salary_cleaner.py  text_cleaner.py
scraper/scraper/core/: browser_manager.py  proxy_manager.py  rate_limiter.py  retry_handler.py
scraper/scraper/deduplication/: deduplicator.py  fingerprinting.py
scraper/scraper/extraction/: extractors.py  html_parser.py  intermediate_schema.py  json_parser.py
scraper/scraper/logging_/: error_tracker.py  logger.py  metrics.py
scraper/scraper/normalization/: canonical_schema.py  normalizer.py  validators.py
scraper/scraper/pipeline/: pipeline.py  scheduler.py  worker.py
scraper/scraper/sources/: base_scraper.py  indeed_scraper.py  linkedin_scraper.py  naukri_scraper.py
scraper/scraper/utils/: constants.py  helpers.py
scraper/tests/: conftest.py
scraper/tests/e2e/: test_full_pipeline.py
scraper/tests/integration/: test_cleaner_pipeline.py  test_indeed_scraper.py  test_naukri_scraper.py  test_registry_output_live.py
scraper/tests/unit/: test_date_cleaner.py  test_deduplicator.py  test_location_cleaner.py  test_normalizer.py  test_rate_limiter.py  test_registry_output.py  test_salary_cleaner.py  test_text_cleaner.py
shared/: README.md  pyproject.toml
(+62 files in other folders)
