[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | \.git
  | __pycache__
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["scraper/tests", "shared/tests", "ai_engine/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=scraper --cov=shared --cov=ai_engine --cov-report=term-missing"

[tool.coverage.run]
omit = [
    ".venv/*",
    "scraper/.venv/*",
    "ai_engine/.venv/*",
    "*/tests/*",
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

