[project]
name = "ai_engine"
version = "0.1.0"
description = "JobHunter AI Engine - Phase 0 MVP"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | \.git
  | __pycache__
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["ai_engine/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=ai_engine --cov-report=term-missing --cov-fail-under=75"

[tool.coverage.run]
omit = [
    "ai_engine/tests/*",
    ".venv/*",
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]