[project]
name = "shared-utilities"
version = "0.0.1"
description = "JobHunter Data Persistance Layer"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"

[tool.setuptools.packages.find]
where = [".."]
include = ["shared*"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(\r
    \.venv\r
  | \.git\r
  | __pycache__\r
  | build\r
  | dist\r
)/\r
'''

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["shared/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=shared --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = [
    "ai_engine/tests/*",
    ".venv/*",
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
